cluster/auth/resources/authelia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: core-auth
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: authelia
      port:
        number: 80
  tls:
    - hosts:
        - authelia
